--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,4 @@
-@import './common';
-@import './example';
+@import "./common";
+@import "./searchcontainer";
+@import "./gallerycontainer";
+@import "./button";
