--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1em;
@@ -26,9 +26,8 @@ p {
   padding-top: 10px;
   padding-bottom: 10px;
   position: fixed;
-  background-image: linear-gradient(180deg, yellow, blue);
-  box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 1px rgb(0 0 0 / 14%),
-    0 2px 1px rgb(0 0 0 / 20%);
+  background-color: #3f57b3;
+  box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 1px rgb(0 0 0 / 14%), 0 2px 1px rgb(0 0 0 / 20%);
 }
 
 .search-form {
@@ -69,6 +68,20 @@ p {
   padding-left: 15px;
   padding-right: 15px;
   padding-bottom: 25px;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    width: 1440px;
+  }
 }
 
 .gallery,
@@ -96,8 +109,7 @@ p {
 
 .gallery__link:hover,
 .gallery__link:focus {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .gallery-item {
@@ -138,7 +150,7 @@ p {
   padding: 8px 20px;
   border: none;
   border-radius: 5px;
-  background-image: linear-gradient(180deg, yellow, blue);
+  background-color: #3f57b3;
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
   font: inherit;
   color: white;
@@ -156,7 +168,7 @@ p {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  background-image: linear-gradient(180deg, yellow, blue);
+  background: #3f57b3;
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
   color: white;
   cursor: pointer;
@@ -171,6 +183,6 @@ p {
 
 .btn-load-more:hover,
 .btn-to-top:hover {
-  background-image: linear-gradient(180deg, red, black);
+  background-color: #2b3e88;
   transition: all 0.3s;
 }
